# OS_labs

./: LICENSE
Laba_1/: CMakelists.txt  child.cpp  main.cpp
Laba_2/: 1.txt  CMakeLists.txt  main.cpp
Laba_4/: CMakeLists.txt
Laba_4/app/: dynamic.cpp  static.cpp
Laba_4/include/: contract.h
Laba_4/lib/: advanced.cpp  basic.cpp
